# SANA-FE

./: .gitignore  CMakeLists.txt  Makefile  README.md  arch.cpp  arch.hpp  command.cpp  demo.py  description.cpp  main.cpp  module.cpp  network.cpp  network.hpp  plotter.py  plugins.cpp  plugins.hpp  requirements.txt  sim.cpp  sim.hpp  sim.py  snn.py
arch/: HH.yaml  truenorth.yaml  truenorth_complex.yaml
plugins/: HH.cpp  TN_lif.cpp  TN_lif_original.cpp  core_lif.cpp  leaky_integrate_fire.cpp  loihi_lif.cpp  test.cpp
snn/: example.net  example_HH.net
snn/nemo/: truenorth_bursting.net  truenorth_bursting_complex.net
